# AI-Chat-SDK

./: .gitignore  README.en.md  README.md
model-access/sdk/include/: DeepSeekProvider.h  LLMManager.h  LLMProvider.h  OllamaLLMProvider.h  SessionManager.h  common.h
model-access/sdk/include/util/: myLog.h
model-access/sdk/src/: ChatGPTProvider.cpp  DeepSeekProvider.cpp  GeminiProvider.cpp  OllamaLLMProvider.cpp  SessionManager.cpp
model-access/sdk/src/util/: myLog.cpp
model-access/test/: CMakeLists.txt  testLLM.cpp
model-access/test/SQLiteTest/: main.cpp
src/ChatServer/: CMakeLists.txt  ChatServer.conf  ChatServer.cpp  ChatServer.h  front_end_require.txt  main.cpp
src/ChatServer/www/: app.js  index.html  style.css
src/sdk/: CMakeLists.txt
src/sdk/include/: ChatGPTProvider.h  ChatSDK.h  DataManager.h  GeminiProvider.h  LLMManager.h  LLMProvider.h  OllamaLLMProvider.h  SessionManager.h  common.h
src/sdk/src/: ChatGPTProvider.cpp  ChatSDK.cpp  DataManager.cpp  DeepSeekProvider.cpp  GeminiProvider.cpp  LLMManager.cpp  SessionManager.cpp
src/test/: CMakeLists.txt  testLLM.cpp
src/test/SQLiteTest/: main.cpp
